Add BedrockFramework to solution.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "websocket-sharp"]
 	path = dep/websocket-sharp
 	url = https://github.com/PhantomGamers/websocket-sharp
+[submodule "dep/BedrockFramework"]
+	path = dep/BedrockFramework
+	url = https://github.com/davidfowl/BedrockFramework.git
