--- a/NebulaModel/NebulaModel.csproj
+++ b/NebulaModel/NebulaModel.csproj
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
+        <ProjectReference Include="..\dep\BedrockFramework\src\Bedrock.Framework\Bedrock.Framework.csproj" />
         <ProjectReference Include="..\dep\websocket-sharp\websocket-sharp\websocket-sharp.csproj" />
         <ProjectReference Include="..\NebulaAPI\NebulaAPI.csproj" Private="false" />
     </ItemGroup>
