Start tinkering with the idea of exporting the networking functions.

--- a/NebulaModel/NebulaModel.csproj
+++ b/NebulaModel/NebulaModel.csproj
@@ -3,6 +3,7 @@
     <ItemGroup>
         <ProjectReference Include="..\dep\websocket-sharp\websocket-sharp\websocket-sharp.csproj" />
         <ProjectReference Include="..\NebulaAPI\NebulaAPI.csproj" Private="false" />
+        <ProjectReference Include="..\NebulaShim\NebulaShim.csproj" />
     </ItemGroup>
 
     <ItemGroup>
