--- a/NebulaShim/NebulaShim.csproj
+++ b/NebulaShim/NebulaShim.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\BedrockFramework\src\Bedrock.Framework\Bedrock.Framework.csproj" />
+    <ProjectReference Include="..\dep\BedrockFramework\src\Bedrock.Framework\Bedrock.Framework.csproj" />
     <ProjectReference Include="..\NebulaModel\NebulaModel.csproj" />
   </ItemGroup>
   
