--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "websocket-sharp"]
 	path = dep/websocket-sharp
 	url = https://github.com/PhantomGamers/websocket-sharp
+[submodule "dep/flatbuffers"]
+	path = dep/flatbuffers
+	url = https://github.com/google/flatbuffers.git
 [submodule "BedrockFramework"]
 	path = dep/BedrockFramework
 	url = https://github.com/mos-ai/BedrockFramework
