--- a/NebulaModel/NebulaModel.csproj
+++ b/NebulaModel/NebulaModel.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="StructPacker" Version="1.0.8" />
+        <PackageReference Include="StructPacker" Version="1.0.9-alpha" />
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>
 </Project>
