--- a/nuget.config
+++ b/nuget.config
@@ -4,5 +4,6 @@
     <clear />
     <add key="BepInEx" value="https://nuget.bepinex.dev/v3/index.json" />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
+    <add key="local" value="dep/nuget" />
   </packageSources>
 </configuration>
