WIP: Start putting together EasyR sample

--- a/nuget.config
+++ b/nuget.config
@@ -4,6 +4,7 @@
     <clear />
     <add key="BepInEx" value="https://nuget.bepinex.dev/v3/index.json" />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
+    <add key="MOS" value="https://f.feedz.io/mos/public/nuget/index.json" />
     <add key="local" value="dep/nuget" />
   </packageSources>
 </configuration>
