--- a/NebulaWorld/NebulaWorld.csproj
+++ b/NebulaWorld/NebulaWorld.csproj
@@ -5,6 +5,7 @@
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\dep\discord_game_sdk\discord_game_sdk_dotnet.csproj" />
+        <ProjectReference Include="..\NebulaEasyRShim\NebulaEasyRShim.csproj" />
         <ProjectReference Include="..\NebulaModel\NebulaModel.csproj" SpecificVersion="true" />
         <ProjectReference Include="..\NebulaAPI\NebulaAPI.csproj" Private="false" />
     </ItemGroup>
