--- a/nuget.config
+++ b/nuget.config
@@ -5,5 +5,6 @@
     <add key="BepInEx" value="https://nuget.bepinex.dev/v3/index.json" />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
     <add key="MOS" value="https://f.feedz.io/mos/public/nuget/index.json" />
+    <add key="valks" value="https://www.myget.org/F/valks-tmp/api/v3/index.json" />
   </packageSources>
 </configuration>
