--- a/NebulaModel/NebulaModel.csproj
+++ b/NebulaModel/NebulaModel.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
-        <ProjectReference Include="..\dep\websocket-sharp\websocket-sharp\websocket-sharp.csproj" />
+        <!--<ProjectReference Include="..\dep\websocket-sharp\websocket-sharp\websocket-sharp.csproj" />-->
         <ProjectReference Include="..\NebulaAPI\NebulaAPI.csproj" Private="false" />
     </ItemGroup>
 
@@ -16,5 +16,6 @@
 
     <ItemGroup>
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
+        <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
     </ItemGroup>
 </Project>
