Updated Nebula.sln and added new projects and files
Updated Nebula.sln to include new projects and configurations. Added new files including Client.cs, GlobalUsings.cs, and various Hub files. Implemented new classes in Server.cs, PlayerConnectionHub.cs, ConnectionService.cs, and ServerManager.cs. Updated project references in NebulaPatcher.csproj and namespaces in GameSave_Patch.cs and UIMainMenu_Patch.cs. Added new package source in nuget.config and updated .gitignore.

--- a/nuget.config
+++ b/nuget.config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="BepInEx" value="https://nuget.bepinex.dev/v3/index.json" />
+    <add key="mos" value="https://f.feedz.io/mos/public/nuget/index.json" />
   </packageSources>
 </configuration>
