--- a/NebulaPatcher/NebulaPatcher.csproj
+++ b/NebulaPatcher/NebulaPatcher.csproj
@@ -4,9 +4,10 @@
         <TargetFramework>net472</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
-        <ProjectReference Include="..\NebulaModel\NebulaModel.csproj" SpecificVersion="true"/>
-        <ProjectReference Include="..\NebulaAPI\NebulaAPI.csproj" Private="false"/>
-        <ProjectReference Include="..\NebulaNetwork\NebulaNetwork.csproj"/>
-        <ProjectReference Include="..\NebulaWorld\NebulaWorld.csproj" SpecificVersion="true"/>
+        <ProjectReference Include="..\NebulaDSPO\NebulaDSPO.csproj" />
+        <ProjectReference Include="..\NebulaModel\NebulaModel.csproj" SpecificVersion="true" />
+        <ProjectReference Include="..\NebulaAPI\NebulaAPI.csproj" Private="false" />
+        <ProjectReference Include="..\NebulaNetwork\NebulaNetwork.csproj" />
+        <ProjectReference Include="..\NebulaWorld\NebulaWorld.csproj" SpecificVersion="true" />
     </ItemGroup>
 </Project>
