Fixed serializer issues.
- Missing initialisation of PacketProcessor's
- Use built in serializer to byte[] to avoid casting issues (types not defined on server)
A missing call during server start to initialise game instance.
- Connection was completing before the ServerManager is instantiated meaning the OnConnected event isn't triggered.

Add Console output for ILogger.
Added more log output for debugging purposes.

--- a/NebulaDSPO/NebulaDSPO.csproj
+++ b/NebulaDSPO/NebulaDSPO.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NebulaModel\NebulaModel.csproj" />
+    <ProjectReference Include="..\NebulaNetwork\NebulaNetwork.csproj" />
     <ProjectReference Include="..\NebulaWorld\NebulaWorld.csproj" />
   </ItemGroup>
 
